--- a/css/style.css
+++ b/css/style.css
@@ -381,13 +381,15 @@
 		padding: 6px 12px;
 	}
 	.home-order {
-		background: url(../images/home-order.jpg);
+		background: url(../images/home-order.jpg)
 		background-size: cover;
 		background-size: no-repeat;
+				background-position: center;
 		min-height: 350px;
 		position: relative;
 		text-align: center;
 		color: white;
+
 	}
 	.home-order .v-align{
 		width: 600px;
