--- a/css/style.css
+++ b/css/style.css
@@ -381,10 +381,10 @@
 		padding: 6px 12px;
 	}
 	.home-order {
-		background: url(../images/home-order.jpg)
+		background: url(../images/home-order.jpg);
 		background-size: cover;
 		background-size: no-repeat;
-				background-position: center;
+		background-position: center;
 		min-height: 350px;
 		position: relative;
 		text-align: center;
