--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,15 @@
 		background-repeat: no-repeat;
 		height: 100vh;
 	}
+	.anchor{
+		position: absolute;
+		bottom: 5%;
+		left: 0;
+		right: 0;
+		text-align: center;
+		font-size: 40px;
+		line-height: 40px;
+	}
 	.home-banner{
 		background-image: url('../images/banner.jpg');
 	}
@@ -703,13 +712,14 @@
 	.projects-menu {
 		margin: 100px 0 50px;
 	}
-	.projects-menu > a {
+	.projects-menu > li {
 		color: #7f7f7f;
 		display: inline-block;
 		font-weight: lighter;
 		letter-spacing: 2px;
 		padding: 3px 20px;
 		transition: 0.8s all ease;
+		cursor: pointer;
 	}
 	.projects-menu > a:hover, .projects-menu .active-btn{
 		background: #56B3DF;
@@ -717,20 +727,8 @@
 		transition: 0.8s all ease;
 	}
 
-  .projects-wrapper {
-  	position: relative;
-  }
-.our-projects {
-/*    transform: scale(0, 0);*/
-    transition: 1s all;
-display: none;
 
-}
-.our-projects.all {
-  	/*transform: scale(1,1);*/
-  display: block;
-}
-	.our-projects > div {
+	.projects-wrapper > div {
 		display: inline-block;
 		overflow: hidden;
 		margin: 0 -2px;
@@ -738,19 +736,8 @@ display: none;
 		width: 33.4%;
 		position: relative;
 	}
-	.our-projects.hidden-project{
-		/*transform: scale(0, 0);*/
-		/*opacity: 0;*/
-		transition: 1s all ease-out;
-		visibility: hidden;
 	
-	}
-	.our-projects.shown-project{
-		/*transform: scale(1,1);*/
-		/*opacity: 1;*/
-		transition: 1s all ease-in;
-
-	}
+	
 	.open-project {
 		background: #56B3DF none repeat scroll 0 0;
 		bottom: 0;
@@ -780,21 +767,25 @@ display: none;
 		padding: 22px 0;
 	}
 
-	.our-projects > div:hover .open-project{
+	.projects-wrapper > div:hover .open-project{
 		transform: translateY(0);
 		transition: 0.3s all ease;
 	}
-	.our-projects > div img {
+	.projects-wrapper > div img {
 		transition: all 0.3s ease 0s;
 	}
-	.our-projects > div:hover img {
+	.projects-wrapper > div:hover img {
 		transform: translateY(-60px);
 		transition: all 0.3s ease 0s;
 	}
 	/*------
 	RESPONSIVE CSS
 	------ */
-
+@media screen and (-webkit-min-device-pixel-ratio:0){
+body{
+	display: none;
+}
+}
 	@media (max-width: 1440px){
 
 	}
