--- a/css/style.css
+++ b/css/style.css
@@ -404,34 +404,34 @@
 		margin: 0 auto;
 	}
 	.v-align .row {
-    display: flex;
-    align-items: center;
-}
+		display: flex;
+		align-items: center;
+	}
 	.order-section span{
 		color: white;
 		font-weight: bold;
 		font-size: 30px;
 	}
-.order-section-title {
-    width: 600px;
-    margin: 0 auto;
-    max-width: 100%;
-}
-.order-section-title h4 {
-    text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 2px;
-    font-size: 49px;
-    margin: 0;
-    color: #56B3DF;
-}
-.order-section-title h6 {
-    color: #244859;
-    font-weight: 100;
-    letter-spacing: 2px;
-    font-size: 24px;
-    margin: 0;
-}
+	.order-section-title {
+		width: 600px;
+		margin: 0 auto;
+		max-width: 100%;
+	}
+	.order-section-title h4 {
+		text-transform: uppercase;
+		font-weight: bold;
+		letter-spacing: 2px;
+		font-size: 49px;
+		margin: 0;
+		color: #56B3DF;
+	}
+	.order-section-title h6 {
+		color: #244859;
+		font-weight: 100;
+		letter-spacing: 2px;
+		font-size: 24px;
+		margin: 0;
+	}
 	.order-section select {
 		border: 1px solid #56b3df;
 		border-width: 0 0 1px 0;
@@ -447,6 +447,9 @@
 		padding: 0 0 10px;
 		vertical-align: middle;
 		width: 200px;
+		color: #fff;
+		color: rgba(0,0,0,0);
+		text-shadow: 0 0 0 #fff;
 	}
 	.overlay{
 		display: none;
@@ -603,15 +606,15 @@
 		left: 0;
 	}
 	/*-- order --*/
-.order-name {
-    font-size: 30px;
-    color: #56B3DF;
-    font-weight: bold;
-}
+	.order-name {
+		font-size: 30px;
+		color: #56B3DF;
+		font-weight: bold;
+	}
 	.order-form {
-    overflow: hidden;
-    margin-top: 50px;
-}
+		overflow: hidden;
+		margin-top: 50px;
+	}
 	.order-form > div {
 		padding: 30px;
 		display: inline-block;
@@ -622,11 +625,11 @@
 	}
 	.order-form > div.first-section {
 		background: #e0e0e0;
-	border-top: 3px solid #244859;
+		border-top: 3px solid #244859;
 
 		width: 30%;
 		z-index: 999;
-	opacity: 1;
+		opacity: 1;
 	}
 	.order-form > div.second-section {
 		border-top: 3px solid #56B3DF;
@@ -636,7 +639,7 @@
 		z-index: 500;
 	}
 	.order-form > div.third-section{
-			border-top: 3px solid #6b6b6b;
+		border-top: 3px solid #6b6b6b;
 		left: -400px;
 		background: #f3f3f3;
 	}
@@ -682,32 +685,32 @@
 		border-radius: 5px;
 		font-size: 13px;
 	}
-		.type-of-logo{
-			text-align: center;
-		}
-		.type-of-logo span{
-			display: block;
-			text-align: left;
-			margin-bottom: 10px;
-		}
+	.type-of-logo{
+		text-align: center;
+	}
+	.type-of-logo span{
+		display: block;
+		text-align: left;
+		margin-bottom: 10px;
+	}
 	.type-of-logo label {
-    display: inline-block;
-    width: 32.3%;
-    margin-bottom: 5px;
-}
-.type-of-logo label > input{ 
-  visibility: hidden; 
-  position: absolute; 
-  margin-bottom: 0;
-}
-.type-of-logo label > input + img{
-  cursor:pointer;
-  border:2px solid transparent;
-}
-.type-of-logo label > input:checked + img{ 
-  border:2px solid #56B3DF;
-  opacity: 0.9;
-}
+		display: inline-block;
+		width: 32.3%;
+		margin-bottom: 5px;
+	}
+	.type-of-logo label > input{ 
+		visibility: hidden; 
+		position: absolute; 
+		margin-bottom: 0;
+	}
+	.type-of-logo label > input + img{
+		cursor:pointer;
+		border:2px solid transparent;
+	}
+	.type-of-logo label > input:checked + img{ 
+		border:2px solid #56B3DF;
+		opacity: 0.9;
+	}
 	/*-- portfolio --*/
 	.projects-menu {
 		margin: 100px 0 50px;
@@ -736,8 +739,8 @@
 		width: 33.4%;
 		position: relative;
 	}
-	
-	
+
+
 	.open-project {
 		background: #56B3DF none repeat scroll 0 0;
 		bottom: 0;
@@ -781,12 +784,14 @@
 	/*------
 	RESPONSIVE CSS
 	------ */
-@media screen and (-webkit-min-device-pixel-ratio:0){
-.order-section select{
-	color: #56B3DF;
-	font-weight: bold;
-}
-}
+	@media screen and (-webkit-min-device-pixel-ratio:0){
+		.order-section select{	
+			font-weight: bold;
+			  color: #56B3DF;
+			color: rgba(0,0,0,0);
+			text-shadow: 0 0 0 #56B3DF;
+		}
+	}
 	@media (max-width: 1440px){
 
 	}
