--- a/css/style.css
+++ b/css/style.css
@@ -456,6 +456,7 @@
 		color: #56B3DF;
 		color: rgba(0,0,0,0);
 		text-shadow: 0 0 0 #56B3DF;		
+		outline: none;
 	}
 	.order-section select > option.small-select{
 	
