--- a/css/style.css
+++ b/css/style.css
@@ -453,6 +453,7 @@
 		color: #fff;
 		font-weight: 900;
 		font-size: 30px;
+		line-height: 30px;
 		padding: 0 0 10px;
 		vertical-align: middle;
 		width: 250px;
