--- a/css/style.css
+++ b/css/style.css
@@ -693,8 +693,12 @@
 	#check input {
 		margin: 0;
 	}
-	.host{
-		padding-left: 15px;
+	.step .row > div.padding-left {
+    padding-left: 15px;
+}
+	.checkboxes input:nth-of-type(2){
+		margin-left: 10px;
+		margin-bottom: 0;
 	}
 	.order-btn{
 		padding: 7px 10px;
