--- a/css/style.css
+++ b/css/style.css
@@ -449,7 +449,7 @@
 	.order-section select {
 		border: 1px solid #56b3df;
 		border-width: 0 0 1px 0;
-		-webkit-appearance: none;
+		/*-webkit-appearance: none;*/
 		-moz-appearance: none;
 		appearance: none;
 		background: transparent url("../images/arrow.png") no-repeat scroll 100% center;
