--- a/css/style.css
+++ b/css/style.css
@@ -162,17 +162,19 @@
 	}
 	ul#nav .special-btn, ul#nav_mobile .special-btn{
 		background: #244859;
-		padding: 6px 12px;
-		border-radius: 10px;
+		padding: 8px 15px;
+		border-radius: 6px;
 		transition: 0.3s all ease;
 	}
-	.special-btn:hover{
+	/* .special-btn:hover{
 		background: #fff;
-		transition: 0.3s all ease;
-	}
+		transition: 2s all ease;
+	} */
+
 	ul#nav .special-btn:hover{
 		color: #56B3DF !important;
 		transition: 0.3s all ease;
+		background: white;
 	}
 
 
@@ -239,6 +241,11 @@
 		padding: 30px 0;
 		min-height: 150px;
 	}
+
+		#why-us a{
+			color: #244859;
+		}
+
 	#why-us i{
 		font-size: 50px;
 		transition: 0.5s all ease;
