--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,9 @@
 	.blue{
 		color: #56B3DF;
 	}
-
+.clear{
+	clear: both;
+}
 
 
 
@@ -360,7 +362,7 @@
 		right: 0;
 	}
 
-	.testimonials-wrapper > div {
+	.testimonials-wrapper li > div {
 		background: #fff none repeat scroll 0 0;
 		border-top: 1px solid #f8f8f8;
 		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
@@ -368,13 +370,14 @@
 		text-align: center;
 		transition: all 0.3s ease 0s;
 		display: inline-block;
-		width: 31.3%;
+		width: 31%;
 		margin-right: 30px;
+		vertical-align: top;
 	}
-	.testimonials-wrapper > div:last-child{
+	.testimonials-wrapper li > div:last-child{
 		margin-right: 0;
 	}
-	.testimonials-wrapper > div:hover{
+	.testimonials-wrapper li > div:hover{
 		box-shadow: 0 22px 43px rgba(0, 0, 0, 0.15);
 		transform: translateY(-10px);
 	}
@@ -414,6 +417,16 @@
 		font-size: 12px;
 		padding: 6px 12px;
 	}
+	.testimonials-slider{
+		position: relative;
+	}
+	.testimonials-slider li {
+    float: none !important;
+    display: inline-block !important;
+}
+.testimonials-slider .flex-control-nav {
+	display: none;
+}
 	.order-section {
 		background: url(../images/order-section.jpg);
 		background-size: cover;
@@ -838,6 +851,14 @@
 		opacity: 0.9;
 	}
 	/*-- portfolio --*/
+	.shown-content{
+		    transform: scale(1);
+    transition: 1s all ease-in;
+	}
+	.hidden-content.shown-content{
+		    transform: scale(0);
+    transition: 1s all ease-in;
+	}
 	.portfolio-banner{
 		background: url(../images/portfolioheader.jpg) no-repeat center center / cover;
 	}
@@ -873,7 +894,7 @@
 		overflow: hidden;
 		margin: 0 -2px;
 		vertical-align: top;
-		width: 33.4%;
+		width: 33.40%;
 		position: relative;
 	}
 
@@ -918,6 +939,30 @@
 		transform: translateY(-60px);
 		transition: all 0.3s ease 0s;
 	}
+	.portfolio-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #fff;
+    bottom: 0;
+    z-index: 9999;
+    text-align: center;
+    padding: 50px 100px;
+    transform: scale(0);
+    transition: 0.8s all ease-in;
+    overflow: auto;
+    max-height: 100vh;
+}
+.portfolio-popup.show-portfolio{
+	transform: scale(1);
+	    transition: 0.8s all ease-in;
+}
+a.close-portfolio-popup{
+	font-size: 50px;
+	font-weight: lighter;
+	color: #58B3E2;
+}
 	/*--  simple order page --*/
 	.order-page {
 		background: transparent;
